--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,9 +12,7 @@ auto-checkout=
 [sources]
 [scripts]
 recipe=zc.recipe.egg
-interpreter=python
-initialization=
-    import os;os.environ['DJANGO_SETTINGS_MODULE'] = "${buildout:dsm}"
+interpreter=mypy
 extra-paths=
     /usr/lib/python2.7/dist-packages
     ${buildout:directory}/${buildout:project}
@@ -25,11 +23,12 @@ eggs=Django
      ipython
      gunicorn
 dependent-scripts = true
+initialization=import os;os.environ['PYTHONPATH'] = ':'.join(sys.path);
 
 [test]
 <= scripts
 interpreter=
-initialization=import sys;sys.argv=sys.argv+["--exe", "-w", "${buildout:directory}/.py"]
+initialization=${scripts:initialization};import sys;sys.argv=sys.argv+["--exe", "-w", "${buildout:directory}/.py"];
 eggs=${scripts:eggs}
     nose
 scripts=test
@@ -58,5 +57,3 @@ pycurl = 7.19.3.1
 requests = 2.3.0
 SQLAlchemy = 0.9.4
 setuptools = 4.0.1
-isotoma.recipe.django = 3.1.5
-
