--- a/.salt/PILLAR.sample
+++ b/.salt/PILLAR.sample
@@ -12,9 +12,6 @@
 # you can also merge parts of this file
 # with the relevant pillar
 
-{% set name = '<CHANGEME>' %}
-{% set name = 'cdjbuildout' %}
-
 makina-projects.projectname:
   data:
     PROJECT: mysite
@@ -48,7 +45,7 @@ makina-projects.projectname:
       - foo:
           mail: "{adminmail}"
           password: {{salt['mc_utils.generate_stored_password'](
-                           name+'_web_admin')}}
+                           'corpus-django_web_admin')}}
     db:
       ENGINE: 'django.db.backends.sqlite3'
       NAME: "{data_root}/{PROJECT}.sqlite"
@@ -69,7 +66,7 @@ makina-projects.projectname:
     py: "{py_root}/bin/mypy"
     USE_X_FORWARDED_HOST: True
     SECRET_KEY: "{{salt['mc_utils.generate_stored_password'](
-                           name+'_web_secret_key', 64)}}"
+                           'corpus-django_web_secret_key', 64)}}"
     # http_users:
     #   - root: foo
   env_defaults:
