--- a/.salt/PILLAR.sample
+++ b/.salt/PILLAR.sample
@@ -63,6 +63,8 @@ makina-projects.projectname:
     host: localhost
     port: 8180
     workers: 1
+    worker_class: sync
+    worker_timeout: 9000
     DEBUG: False
     py: "{py_root}/bin/mypy"
     USE_X_FORWARDED_HOST: True
